--- a/src/sample/MellomSide_Standardbruker.fxml
+++ b/src/sample/MellomSide_Standardbruker.fxml
@@ -2,25 +2,40 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="301.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MellomSide_Standardbruker_Controller">
    <children>
-      <Button layoutX="43.0" layoutY="104.0" mnemonicParsing="false" onAction="#click_btn_bygg_egen_pc" prefHeight="70.0" prefWidth="178.0" style="-fx-background-color: #3daee4;" text="Bygg egen pc">
+      <ImageView fitHeight="308.0" fitWidth="566.0" layoutX="-8.0" layoutY="-7.0">
+         <image>
+            <Image url="@../img/background.jpg" />
+         </image>
+      </ImageView>
+      <Button layoutX="28.0" layoutY="141.0" mnemonicParsing="false" onAction="#click_btn_bygg_egen_pc" prefHeight="70.0" prefWidth="234.0" style="-fx-background-color: #3daee4;" text="Bygg egen pc">
          <font>
-            <Font name="Constantia Bold" size="14.0" />
+            <Font name="Verdana" size="14.0" />
          </font></Button>
-      <Button layoutX="288.0" layoutY="104.0" mnemonicParsing="false" onAction="#click_btn_individuellekomponenter" prefHeight="70.0" prefWidth="234.0" style="-fx-background-color: #3daee4;" text="Kjøp Individuelle komponenter">
+      <Button layoutX="287.0" layoutY="141.0" mnemonicParsing="false" onAction="#click_btn_individuellekomponenter" prefHeight="70.0" prefWidth="234.0" style="-fx-background-color: #3daee4;" text="Kjøp&#10;individuelle komponenter" textAlignment="CENTER">
          <font>
-            <Font name="Constantia Bold" size="14.0" />
+            <Font name="Verdana" size="14.0" />
          </font></Button>
-      <Button layoutX="201.0" layoutY="208.0" mnemonicParsing="false" onAction="#click_btn_Tilbake" prefHeight="34.0" prefWidth="83.0" style="-fx-background-color: black;" text="Tilbake" textFill="#dfdada" />
-      <Label layoutX="53.0" layoutY="41.0" prefHeight="34.0" prefWidth="469.0" text="Du har nå logget inn som en standarbruker, hvilken side vil du til nå?">
+      <Button layoutX="245.0" layoutY="229.0" mnemonicParsing="false" onAction="#click_btn_Tilbake" prefHeight="25.0" prefWidth="69.0" style="-fx-background-color: black;" text="Tilbake" textFill="#dfdada" />
+      <Label layoutX="37.0" layoutY="93.0" prefHeight="34.0" prefWidth="484.0" text="Du har nå logget inn som en standardbruker, hvilken side vil du til nå?">
          <font>
-            <Font name="Rockwell" size="15.0" />
+            <Font name="Verdana Bold" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="lblError" layoutX="160.0" layoutY="262.0" prefHeight="18.0" prefWidth="310.0" />
+      <Label fx:id="lblError" layoutX="124.0" layoutY="268.0" prefHeight="18.0" prefWidth="310.0">
+         <font>
+            <Font name="Verdana" size="12.0" />
+         </font></Label>
+      <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="179.0" layoutY="-14.0">
+         <image>
+            <Image url="@../img/logo3.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
