--- a/src/sample/Registrering.fxml
+++ b/src/sample/Registrering.fxml
@@ -102,11 +102,6 @@
                       <Font name="Verdana" size="14.0" />
                   </font>
               </Button>
-              <Label fx:id="labelError" prefHeight="41.0" prefWidth="268.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                  <font>
-                      <Font name="Verdana Bold" size="13.0" />
-                  </font>
-              </Label>
             <Label text="Register ny bruker" GridPane.columnIndex="1">
                <font>
                   <Font name="Verdana Bold" size="22.0" />
@@ -117,5 +112,10 @@
             </Label>
          </children>
       </GridPane>
+        <Label fx:id="labelError" alignment="CENTER" layoutY="446.0" prefHeight="41.0" prefWidth="596.0" textAlignment="CENTER">
+            <font>
+                <Font name="Verdana Bold" size="13.0" />
+            </font>
+        </Label>
     </children>
 </AnchorPane>
