--- a/src/sample/Registrering.fxml
+++ b/src/sample/Registrering.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="596.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Registrering_Controller">
     <children>
-        <GridPane alignment="CENTER" layoutX="-1.0" layoutY="1.0" prefHeight="481.0" prefWidth="596.0" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
+        <GridPane alignment="CENTER" layoutX="-1.0" layoutY="1.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="455.0" prefWidth="596.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.7999755859375" minWidth="10.0" prefWidth="199.99998779296874" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="277.4" minWidth="10.0" prefWidth="267.1999755859375" />
@@ -112,10 +112,21 @@
                 </Label>
             </children>
         </GridPane>
-        <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutY="446.0" prefHeight="41.0" prefWidth="596.0" textAlignment="CENTER" AnchorPane.topAnchor="446.0">
-            <font>
-                <Font name="Verdana Bold" size="13.0" />
-            </font>
-        </Label>
+      <GridPane alignment="BOTTOM_CENTER" layoutY="453.0" prefHeight="39.0" prefWidth="596.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="453.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="46.0" minHeight="23.0" prefHeight="46.0" valignment="CENTER" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="23.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+              <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="601.0" text="hei" textAlignment="CENTER" GridPane.halignment="CENTER">
+                  <font>
+                      <Font name="Verdana Bold" size="13.0" />
+                  </font>
+              </Label>
+         </children>
+      </GridPane>
     </children>
 </AnchorPane>
