--- a/src/sample/Visbruker_Superbruker.fxml
+++ b/src/sample/Visbruker_Superbruker.fxml
@@ -95,7 +95,7 @@
                         <Font name="Verdana" size="15.0" />
                     </font>
                     <GridPane.margin>
-                        <Insets right="40.0" top="10.0" />
+                        <Insets right="50.0" top="10.0" />
                     </GridPane.margin>
                 </Button>
                 <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" prefHeight="55.0" prefWidth="710.0" text="Admin har true verdi mens en sluttbruker har false verdi" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
@@ -103,7 +103,7 @@
                         <Font name="Verdana Bold" size="12.0" />
                     </font>
                     <GridPane.margin>
-                        <Insets />
+                        <Insets right="20.0" />
                     </GridPane.margin>
                 </Label>
                 <TableView fx:id="tableView" prefHeight="286.0" prefWidth="699.0" style="-fx-font-family: Verdana;" GridPane.rowIndex="1">
