--- a/src/sample/MellomSide.fxml
+++ b/src/sample/MellomSide.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-            prefWidth="420.0" stylesheets="@../sample/style.css" xmlns="http://javafx.com/javafx/8.0.171"
+            prefWidth="420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MellomSide_Controller">
     <children>
         <GridPane layoutY="59.0" prefHeight="511.0" prefWidth="420.0" AnchorPane.bottomAnchor="82.0"
