--- a/src/sample/Standardbruker_IndividuelleKomponenter.fxml
+++ b/src/sample/Standardbruker_IndividuelleKomponenter.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1000.0" stylesheets="@../sample/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_IndividuelleKomponenter_Controller">
+<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1000.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_IndividuelleKomponenter_Controller">
     <children>
         <TableView fx:id="tableView" layoutX="267.0" layoutY="104.0" minWidth="618.0" prefHeight="539.0" prefWidth="726.0" style="-fx-font-family: Verdana;" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="104.0">
             <columns>
