--- a/src/sample/Visbruker_Superbruker.fxml
+++ b/src/sample/Visbruker_Superbruker.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="584.0" prefWidth="900.0" stylesheets="@../sample/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Visbruker_Superbruker_Controller">
+<AnchorPane prefHeight="584.0" prefWidth="900.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Visbruker_Superbruker_Controller">
     <children>
         <Separator layoutY="67.0" prefHeight="2.0" prefWidth="908.0" style="-fx-background-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.39999999999997726" AnchorPane.topAnchor="67.0" />
         <AnchorPane id="anchorPaneVisBruker" fx:id="pane" layoutX="180.0" layoutY="96.0" prefHeight="374.0" prefWidth="689.0" />
