--- a/src/sample/Viskomponenter_Superbruker.fxml
+++ b/src/sample/Viskomponenter_Superbruker.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="629.0" prefWidth="973.0" stylesheets="@../sample/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Viskomponenter_Superbruker_Controller">
+<AnchorPane prefHeight="629.0" prefWidth="973.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Viskomponenter_Superbruker_Controller">
     <children>
         <Separator layoutY="67.0" prefHeight="3.0" prefWidth="900.0" style="-fx-background-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.2000000000000455" AnchorPane.topAnchor="67.0" />
         <GridPane layoutX="-5.0" layoutY="110.0" prefHeight="445.0" prefWidth="186.0" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="-5.0" AnchorPane.topAnchor="110.0">
